--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=file:env.properties
+
 spring.application.name=bloggingapp
 server.port=3001
 # DB Config
@@ -9,3 +11,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
+
+# Cloudinary Config
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.secret=${CLOUDINARY_SECRET}
+cloudinary.key=${CLOUDINARY_KEY}
